강의 실습내용 반영

--- a/오픈소스_데이터_분석_2강.ipynb
+++ b/오픈소스_데이터_분석_2강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/juhnny/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,47 +32,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "2Y2HEiaiRwAI"
+        "id": "2Y2HEiaiRwAI",
+        "outputId": "fa31464f-9d67-4be9-a825-db7225925e42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30, 40]\n",
+            "[50, 60, 70]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "# 첫 4개의 원소 출력\n",
-        "\n",
+        "first_four = numbers[:4]\n",
         "print(first_four)\n",
-        "# 뒤 3개의 원소를 출력\n",
         "\n",
+        "# 뒤 3개의 원소를 출력\n",
+        "last_three = numbers[-3:]\n",
         "print(last_three)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "IO8bsKekR0W_"
+        "id": "IO8bsKekR0W_",
+        "outputId": "7a81dedb-d357-4baf-fa24-6b984052ee65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 30, 50, 70]\n",
+            "[70, 60, 50, 40, 30, 20, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "\n",
         "# 홀수번째 항목 출력\n",
-        "\n",
+        "every_other_list = numbers[::2]\n",
         "print(every_other_list)\n",
         "\n",
         "# 역순 출력\n",
-        "\n",
+        "reverse_list = numbers[::-1]\n",
         "print(reverse_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "outputId": "1a03b2d6-edd7-4061-9c54-008363eea8c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3, 4], [5, 6, 7, 8]]\n",
+            "[[1, 2], [5, 6], [9, 10], [13, 14]]\n"
+          ]
+        }
+      ],
       "source": [
         "matrix = [\n",
         "    [1, 2, 3, 4],\n",
@@ -82,13 +122,11 @@
         "]\n",
         "\n",
         "# 첫 두 행 출력\n",
-        "\n",
-        "\n",
+        "first_two_rows = matrix[0:2]\n",
         "print(first_two_rows)\n",
         "\n",
         "# 첫 두 열 출력\n",
-        "\n",
-        "\n",
+        "first_two_columns = [ row[0:2] for row in matrix ]\n",
         "print(first_two_columns)"
       ]
     },
@@ -103,28 +141,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "outputId": "d94b1f69-2cd9-4ff9-97a1-64b3f5b84479",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n",
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [ ]\n",
         "\n",
         "# 1 ~ 5 포함 리스트 생성\n",
         "for i in range(5):\n",
         "    numbers.append(i)\n",
+        "print(numbers)\n",
         "\n",
-        "print(numbers)"
+        "# 리스트 컴프리헨션 사용\n",
+        "numbers2 = [ n for n in range(5) ]\n",
+        "print(numbers2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "cRC8x3_iW0im"
+        "id": "cRC8x3_iW0im",
+        "outputId": "870749d6-c3fa-4c11-a778-9c8430d2cbaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n",
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5]\n",
         "squares = [ ]\n",
@@ -132,73 +199,132 @@
         "# numbers의 모든 항목의 값을 제곱한 리스트\n",
         "for num in numbers:\n",
         "  squares.append(num ** 2)\n",
+        "print(squares)\n",
         "\n",
-        "print(squares)"
+        "# 리스트 컴프리헨션 사용\n",
+        "squares2 = [ num ** 2 for num in numbers ]\n",
+        "print(squares2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "MAvimjk6Fqlc"
+        "id": "MAvimjk6Fqlc",
+        "outputId": "c7be16e4-eadf-4e22-ddb1-eacff96ca431",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-        "even_numbers = [ ]\n",
+        "# even_numbers = [ ]\n",
         "\n",
         "# 짝수만 추출한 리스트\n",
-        "for num in numbers:\n",
-        "    if num % 2 == 0:\n",
-        "        even_numbers.append(num)\n",
-        "\n",
+        "# for num in numbers:\n",
+        "#     if num % 2 == 0:\n",
+        "#         even_numbers.append(num)\n",
+        "even_numbers = [ num for num in numbers if num % 2 == 0 ]\n",
         "print(even_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "HGO8XTxBFqld"
+        "id": "HGO8XTxBFqld",
+        "outputId": "21f39a8a-d6df-423e-cf63-27f211054c98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('사과', '주스'), ('사과', '잼'), ('사과', '통조림'), ('복숭아', '주스'), ('복숭아', '잼'), ('복숭아', '통조림'), ('바나나', '주스'), ('바나나', '잼'), ('바나나', '통조림')]\n"
+          ]
+        }
+      ],
       "source": [
         "list1 = ['사과', '복숭아', '바나나']\n",
         "list2 = ['주스', '잼', '통조림']\n",
         "pairs = [ ]\n",
         "\n",
         "# 두 리스트에 포함되 모든 원소를 조합한 투플의 리스트 생성\n",
-        "for fruit in list1:\n",
-        "    for product in list2:\n",
-        "        pairs.append((fruit, product))\n",
+        "# for fruit in list1:\n",
+        "#     for product in list2:\n",
+        "#         pairs.append((fruit, product))\n",
+        "# print(pairs)\n",
         "\n",
-        "print(pairs)"
+        "# 컴프리헨션 - 중첩 반복문\n",
+        "pairs2 = [(fruit, product) for fruit in list1 for product in list2]\n",
+        "print(pairs2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "K-BPhFTUFqle"
+        "id": "K-BPhFTUFqle",
+        "outputId": "0e77db09-ba41-438b-b56f-e85e84d4aacb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n",
+            "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+          ]
+        }
+      ],
       "source": [
         "squares = { }\n",
         "\n",
         "# 딕셔너리 생성\n",
         "for i in range(5):\n",
         "    squares[i] = i ** 2\n",
+        "print(squares)\n",
         "\n",
-        "print(squares)"
+        "# 컴프리헨션\n",
+        "squares2 = { i : i ** 2 for i in range(5)}\n",
+        "print(squares2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "UoTcC8-GFqlf"
+        "id": "UoTcC8-GFqlf",
+        "outputId": "eb916b37-5e43-4be6-a14a-b3849d54a2cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'서울': 957, '부산': 339, '인천': 294, '대구': 242}\n",
+            "{'부산': 339}\n"
+          ]
+        }
+      ],
       "source": [
         "city_population = {\n",
         "    '서울': 957, '부산': 339, '인천': 294, '대구': 242, '광주': 145, '대전': 147,\n",
@@ -206,11 +332,11 @@
         "}\n",
         "\n",
         "# 인구 200만명 이상의 도시 리스트\n",
-        "\n",
+        "large_cities = { city: pop for city, pop in city_population.items() if pop >= 200 }\n",
         "print(large_cities)\n",
         "\n",
         "# 인구 300만 이상 및 이름에 '산'이 포함된 도시 리스트\n",
-        "\n",
+        "large_short_name_cities = { city: pop for city, pop in city_population.items() if '산' in city and pop >= 300 }\n",
         "print(large_short_name_cities)"
       ]
     },
@@ -225,11 +351,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "fzO0h6KfFqlg"
+        "id": "fzO0h6KfFqlg",
+        "outputId": "e756f38c-1bf4-4e39-9545-1aa8ab25636c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3500000원\n"
+          ]
+        }
+      ],
       "source": [
         "name = '홍길동'\n",
         "age = 30\n",
@@ -238,6 +376,7 @@
         "\n",
         "# C 스타일 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = '이름: %s, 나이: %d, 월급: %d원' % (name, age, salary)\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
         "\n",
@@ -246,8 +385,8 @@
         "\n",
         "\n",
         "print(basic_format)\n",
-        "print(index_format)\n",
-        "print(keyword_format)"
+        "# print(index_format)\n",
+        "# print(keyword_format)"
       ]
     },
     {
@@ -260,6 +399,9 @@
         "\n",
         "# str.format 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = '이름: {}, 나이: {}, 월급: {}원'.format(name, age, salary)\n",
+        "# 인덱스를 사용하면 여러 번 사용 간편\n",
+        "basic_format2 = '{0} - 이름: {0}, 나이: {1}, 월급: {2}원'.format(name, age, salary)\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
         "\n",
@@ -267,14 +409,28 @@
         "\n",
         "\n",
         "print(basic_format)\n",
-        "print(index_format)\n",
-        "print(keyword_format)"
+        "print(basic_format2)\n",
+        "# print(index_format)\n",
+        "# print(keyword_format)"
       ],
       "metadata": {
-        "id": "cIvmmcQux_ph"
+        "id": "cIvmmcQux_ph",
+        "outputId": "820f98e0-fed8-4478-8583-f2e997fb498c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3500000원\n",
+            "홍길동 - 이름: 홍길동, 나이: 30, 월급: 3500000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -286,6 +442,7 @@
         "\n",
         "# f-문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
+        "basic_format = f'이름: {name}, 나이: {age}, 월급: {salary:,}원'\n",
         "\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
         "\n",
@@ -293,14 +450,26 @@
         "\n",
         "\n",
         "print(basic_format)\n",
-        "print(index_format)\n",
-        "print(keyword_format)"
+        "# print(index_format)\n",
+        "# print(keyword_format)"
       ],
       "metadata": {
-        "id": "EIO3z-XQx_ce"
+        "id": "EIO3z-XQx_ce",
+        "outputId": "67568d85-a928-4e61-e2f4-6a3651afc84e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3,500,000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "eFpmQp3QFqlh"
       },
@@ -321,12 +490,18 @@
       "source": [
         "# 파일 오픈 & 클로즈\n",
         "file = open('output.txt', 'w')\n",
-        "file.write('Hello, world!\\n')\n"
+        "file.write('Hello, world!\\n')\n",
+        "# 빼먹기 쉬운 클로즈! 그로 인한 버그도 많이 발생\n",
+        "file.close\n",
+        "\n",
+        "# with를 사용하면 블록 종료 시 자원 자동 반환!\n",
+        "with open('output2.txt', 'w') as file2:\n",
+        "    file2.write('Hello, mama!\\n')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "D0aOLti0Fqlh"
       },
@@ -338,19 +513,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "6SE0rrD5Fqli"
+        "id": "6SE0rrD5Fqli",
+        "outputId": "ab514f9b-aa16-4d2b-e1ba-f617f16ba9d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "학번,이름,데이터베이스,파이썬,클라우드\n",
+            "101,김철수,85,78,92\n",
+            "102,이영희,76,82,78\n",
+            "103,박지민,92,95,85\n",
+            "104,최준서,63,70,75\n",
+            "105,정미나,88,84,91\n",
+            "\n",
+            "200\n"
+          ]
+        }
+      ],
       "source": [
         "import urllib.request\n",
         "\n",
         "# URL 연결 관리\n",
-        "('https://raw.githubusercontent.com/jaehwachung/Data-Analysis-with-Open-Source/refs/heads/main/Chapter%203/students.csv')\n",
-        "    data = response.read( ).decode('utf-8')\n",
+        "url = 'https://raw.githubusercontent.com/jaehwachung/Data-Analysis-with-Open-Source/refs/heads/main/Chapter%203/students.csv'\n",
+        "with urllib.request.urlopen(url) as u:\n",
+        "    data = u.read().decode('utf-8')\n",
+        "    result_code = u.getcode()\n",
         "\n",
-        "print(data)"
+        "print(data)\n",
+        "print(result_code)"
       ]
     }
   ],
