--- a/오픈소스_데이터_분석_3강.ipynb
+++ b/오픈소스_데이터_분석_3강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_3%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/juhnny/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_3%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,36 +32,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "2Y2HEiaiRwAI"
+        "id": "2Y2HEiaiRwAI",
+        "outputId": "afd17dc8-0279-4365-c191-9ba734c17195",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x좌표: 10, y좌표: 20\n",
+            "빨강: 255, 초록: 128, 파랑: 0\n",
+            "첫 번째 문자: A, 두 번째 문자: B, 세 번째 문자: C\n"
+          ]
+        }
+      ],
       "source": [
         "coordinates = (10, 20)\n",
         "\n",
         "# 튜플 언패킹\n",
-        "\n",
+        "x, y = coordinates\n",
         "print(f'x좌표: {x}, y좌표: {y}')\n",
         "\n",
         "rgb = [255, 128, 0]\n",
         "# 리스트 언패킹\n",
-        "\n",
+        "red, green, blue = rgb\n",
         "print(f'빨강: {red}, 초록: {green}, 파랑: {blue}')\n",
         "\n",
         "word = 'ABC'\n",
         "# 문자열 언패킹\n",
-        "\n",
+        "first, second, third = word\n",
         "print(f'첫 번째 문자: {first}, 두 번째 문자: {second}, 세 번째 문자: {third}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "IO8bsKekR0W_"
+        "id": "IO8bsKekR0W_",
+        "outputId": "95f97d30-9649-4f19-eaef-29b62aaf9a45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최솟값: 5, 최댓값: 32, 평균: 15.57\n"
+          ]
+        }
+      ],
       "source": [
         "def get_dataset_stats(values):\n",
         "  return min(values), max(values), sum(values) / len(values)\n",
@@ -69,17 +95,31 @@
         "data = [12, 8, 21, 17, 5, 32, 14]\n",
         "\n",
         "# 함수값 return 언패킹\n",
-        "\n",
+        "minimum, maximum, average = get_dataset_stats(data)\n",
         "print(f'최솟값: {minimum}, 최댓값: {maximum}, 평균: {average:.2f}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "outputId": "eca4e5f1-dc5a-4343-a111-d7f86e35ab08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "김철수의 평균 점수: 85.0\n",
+            "이영희의 평균 점수: 91.7\n",
+            "박지민의 평균 점수: 82.7\n"
+          ]
+        }
+      ],
       "source": [
         "student_scores = [\n",
         "    ('김철수', 85, 92, 78),\n",
@@ -88,32 +128,51 @@
         "]\n",
         "\n",
         "# 반복문에서 언패킹 사용\n",
-        "for    :\n",
+        "for name, database, python, cloud in student_scores   :\n",
         "  average = (database + python + cloud) / 3\n",
         "  print(f'{name}의 평균 점수: {average:.1f}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "outputId": "28ad21e9-7cd5-47ff-de82-870c0d22a9f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1월 판매액: 1200\n",
+            "2월 판매액: 1350\n",
+            "나머지 월 판매액: [1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850, 1900, 2000]\n",
+            "첫 달(1월) 판매액: 1200\n",
+            "마지막 달(12월) 판매액: 2000\n",
+            "중간 달(2~11월)의 판매액: [1350, 1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850, 1900]\n"
+          ]
+        }
+      ],
       "source": [
         "monthly_sales = [1200, 1350, 1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850, 1900, 2000]\n",
         "\n",
         "# 1월, 2월 및 나머지 월 매출액\n",
-        "\n",
+        "first, second, *remaining = monthly_sales\n",
         "print(f'1월 판매액: {first}')\n",
         "print(f'2월 판매액: {second}')\n",
         "print(f'나머지 월 판매액: {remaining}')\n",
         "\n",
         "# 1월, 12월 및 나머지 월 매출액\n",
-        "\n",
+        "first, *middle, last = monthly_sales\n",
         "print(f'첫 달(1월) 판매액: {first}')\n",
         "print(f'마지막 달(12월) 판매액: {last}')\n",
-        "print(f'중간 달(2~11월)의 판매액: {middle}')"
+        "print(f'중간 달(2~11월)의 판매액: {middle}')\n",
+        "\n",
+        "# 함수 정의할 때 파라미터에 언패킹을 사용하곤 함"
       ]
     },
     {
@@ -127,11 +186,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "cRC8x3_iW0im"
+        "id": "cRC8x3_iW0im",
+        "outputId": "f7b9b95d-3ee2-4488-812d-4296cb00ea41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "김철수의 성적: 3.8\n",
+            "이영희의 성적: 4.2\n",
+            "박민수의 성적: 3.5\n"
+          ]
+        }
+      ],
       "source": [
         "students = [\n",
         "    (20251234, '김철수', '컴퓨터과학', 2, 3.8),\n",
@@ -140,24 +213,35 @@
         "]\n",
         "\n",
         "# 이름 및 성적 만 출력\n",
-        "for    :\n",
+        "for _, name, _, _, grade in students   :\n",
         "    print(f'{name}의 성적: {grade}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "oYTUmCiXzIvV"
+        "id": "oYTUmCiXzIvV",
+        "outputId": "2f3cbd66-8730-447e-daa1-687bff5c198d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ],
       "source": [
         "def get_coordinates( ):\n",
         "    return (10, 20, 30)\n",
         "\n",
         "# 함수 return 값 언더스코어 사용\n",
-        "\n",
-        "\n",
+        "_, y, _ = get_coordinates()\n",
         "print(y)"
       ]
     },
@@ -172,11 +256,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "IgUsqEAgzIvV"
+        "id": "IgUsqEAgzIvV",
+        "outputId": "cdd28509-34d0-439d-f712-9cfb4c395ce7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "정수를 입력하세요: fsdf\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: 'fsdf'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3692144035.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnumber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'정수를 입력하세요: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnumber\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'결과: {result}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'fsdf'"
+          ]
+        }
+      ],
       "source": [
         "number = int(input('정수를 입력하세요: '))\n",
         "result = 10 / number\n",
@@ -185,63 +293,119 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "sGaFzT-WzdQF",
+        "outputId": "a109f1f4-52f1-47da-aee8-cac68b9bb430",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수를 입력하세요: 0\n",
+            "0으로 나눌 수 없습니다.\n"
+          ]
+        }
+      ],
       "source": [
-        "number = int(input('정수를 입력하세요: '))\n",
-        "\n",
         "# try 문\n",
-        "result = 10 / number\n",
-        "print(f'결과: {result}')\n",
+        "try:\n",
+        "    number = int(input('정수를 입력하세요: '))\n",
+        "    result = 10 / number\n",
+        "    print(f'결과: {result}')\n",
         "\n",
         "# except 문\n",
-        "print('0으로 나눌 수 없습니다.')"
-      ],
-      "metadata": {
-        "id": "sGaFzT-WzdQF"
-      },
-      "execution_count": null,
-      "outputs": []
+        "except:\n",
+        "    print('0으로 나눌 수 없습니다.')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "aJycqfJvzdGc",
+        "outputId": "d8a8f5cd-a7b6-4675-bcf3-7ee7f1102a90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자를 입력하세요: asdf\n",
+            "유효한 숫자를 입력해야 합니다.\n"
+          ]
+        }
+      ],
       "source": [
         "# try 문\n",
-        "number = int(input('숫자를 입력하세요: '))\n",
-        "result = 10 / number\n",
-        "\n",
+        "try:\n",
+        "    number = int(input('숫자를 입력하세요: '))\n",
+        "    result = 10 / number\n",
+        "    print(f'결과: {result}')\n",
         "# except 문 1\n",
-        "print('유효한 숫자를 입력해야 합니다.')\n",
+        "except ZeroDivisionError:\n",
+        "    print('0으로 나눌 수 없습니다.')\n",
         "\n",
         "# except 문 2\n",
-        "print('0으로 나눌 수 없습니다.')\n",
-        "\n",
-        "print(f'결과: {result}')"
-      ],
-      "metadata": {
-        "id": "aJycqfJvzdGc"
-      },
-      "execution_count": null,
-      "outputs": []
+        "except ValueError:\n",
+        "    print('숫자를 입력해야 합니다.')\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "lPcWWLiJ0ws4",
+        "outputId": "648fbc03-d611-4bb8-844c-34e7228c2866",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "파일을 찾을 수 없습니다.\n",
+            "파일 작업 종료.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'file' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-420584390.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'파일 작업 종료.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'file' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# try 문\n",
-        "file = open('data.csv', 'r')\n",
-        "content = file.read( )\n",
-        "print(content)\n",
+        "try:\n",
+        "    file = open('data.csv', 'r')\n",
+        "    content = file.read( )\n",
+        "    print(content)\n",
         "\n",
         "# except 문\n",
-        "print('파일을 찾을 수 없습니다.')\n",
+        "except:\n",
+        "    print('파일을 찾을 수 없습니다.')\n",
         "\n",
         "# fianlly 블럭\n",
-        "print('파일 작업 종료.')\n",
-        "file.close( )"
-      ],
-      "metadata": {
-        "id": "lPcWWLiJ0ws4"
-      },
-      "execution_count": null,
-      "outputs": []
+        "finally:\n",
+        "    print('파일 작업 종료.')\n",
+        "    file.close( )"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -254,11 +418,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "Syg5knhezIvV"
+        "id": "Syg5knhezIvV",
+        "outputId": "ccde09bb-ee86-4f69-82c6-acbfb197adcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'이지혜': 3300000.0000000005, '구민준': 5500000.0, '방서연': 4510000.0}\n"
+          ]
+        }
+      ],
       "source": [
         "employees = {\n",
         "    '이지혜': 3000000,\n",
@@ -267,43 +443,70 @@
         "}\n",
         "\n",
         "# 함수 정의: salary * 1.1\n",
+        "adjust_salary = lambda salary: salary * 1.1\n",
         "\n",
         "# 급여 인상\n",
-        "\n",
+        "updated_salaries = { name: adjust_salary(salary) for name, salary in employees.items() }\n",
         "print(updated_salaries)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "KM0psbppzIvV"
+        "id": "KM0psbppzIvV",
+        "outputId": "653b81e2-7670-4f02-a775-166e2063f18b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "섭씨 온도 데이터: [25.6, 27.8, 30.5, 22.3, 28.9, 31.2, 24.7]\n",
+            "화씨 온도로 변환: [78.08000000000001, 82.03999999999999, 86.9, 72.14, 84.02, 88.16, 76.46000000000001]\n"
+          ]
+        }
+      ],
       "source": [
         "temperature_celsius = [25.6, 27.8, 30.5, 22.3, 28.9, 31.2, 24.7]\n",
         "\n",
         "# 함수 정의: 섭씨 -> 화씨\n",
-        "\n",
+        "cel_to_fah = lambda cel: cel * (9/5) + 32\n",
         "# 온도 변환\n",
         "\n",
-        "\n",
+        "temperature_fahrenheit = list(map(cel_to_fah, temperature_celsius))\n",
         "print('섭씨 온도 데이터:', temperature_celsius)\n",
         "print('화씨 온도로 변환:', temperature_fahrenheit)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "rG3nqqfDzIvW"
+        "id": "rG3nqqfDzIvW",
+        "outputId": "afe680f2-9b1c-4f40-c16b-03080d630b96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['PYTHON', 'DATA', 'ANALYSIS']\n"
+          ]
+        }
+      ],
       "source": [
         "words = ['python', 'data', 'analysis']\n",
         "\n",
         "# 함수 정의 및 대문자화\n",
-        "\n",
+        "uppercase = lambda str: str.upper()\n",
+        "uppercase_words = list(map(uppercase, words))\n",
         "\n",
         "print(uppercase_words)"
       ]
@@ -350,11 +553,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "1E-RQnBfzIvW"
+        "id": "1E-RQnBfzIvW",
+        "outputId": "635cab59-867d-4a41-a675-67092c7102aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 김지원, 점수: 85\n",
+            "이름: 박서연, 점수: 90\n",
+            "이름: 최예은, 점수: 78\n"
+          ]
+        }
+      ],
       "source": [
         "osda_students = [\n",
         "    {'name': '김지원', 'score': 85},\n",
@@ -365,19 +582,31 @@
         "]\n",
         "\n",
         "# 70점 이상 학생 목록 생성\n",
-        "\n",
+        "passed_students = list(filter( lambda student: student['score'] >= 70, osda_students))\n",
         "\n",
         "for student in passed_students:\n",
-        "    print(f'이름: {student['name']}, 점수: {student['score']}')"
+        "    print(f'이름: {student[\"name\"]}, 점수: {student[\"score\"]}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "1sVaIuwFzIvW"
+        "id": "1sVaIuwFzIvW",
+        "outputId": "967d7cf5-6872-42c1-d408-32ea832be33f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ],
       "source": [
         "from functools import reduce\n",
         "\n",
@@ -385,7 +614,7 @@
         "\n",
         "# 최대값 생성\n",
         "\n",
-        "\n",
+        "max_value = reduce(lambda x, y: x if x > y else y, numbers)\n",
         "print(max_value)"
       ]
     }
