강의 수강 및 실습

--- a/오픈소스_데이터_분석_4강.ipynb
+++ b/오픈소스_데이터_분석_4강.ipynb
@@ -39,6 +39,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Colab 좌측 파일 메뉴에 Chapter3 자료 추가한 후 진행"
+      ],
+      "metadata": {
+        "id": "Wko8ibA04Hb2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 4-1 CSV 파일 읽기"
       ],
       "metadata": {
@@ -62,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +427,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +492,7 @@
           "height": 216
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
