--- a/오픈소스_데이터_분석_5강.ipynb
+++ b/오픈소스_데이터_분석_5강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/juhnny/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +46,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "import pandas as pd\n",
         "\n",
         "data = {\n",
         "    'student_id': [101, 102, 103, 104, 105],\n",
@@ -56,13 +56,15 @@
         "    'watch_rate': [0.95, 0.87, 0.99, 0.80, 0.93]\n",
         "}\n",
         "## DataFrame 생성\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
-        "## CSV 형식 저장\n"
+        "## CSV 형식 저장\n",
+        "df.to_csv('student_analysis.csv', encoding='utf-8', index=False)\n"
       ],
       "metadata": {
         "id": "DztLRI9gW2lk"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +80,7 @@
       "cell_type": "code",
       "source": [
         "### 라이브러리 임포트\n",
-        "\n",
+        "import json\n",
         "import pandas as pd\n",
         "\n",
         "data = {\n",
@@ -89,13 +91,18 @@
         "}\n",
         "\n",
         "## json.dump를 이용한 저장\n",
+        "with open('output.json', mode='w', encoding='utf-8') as f:\n",
+        "    #json은 기본적으로 한글을 저장하고 ASCII로만 저장하므로 한글을 저장하려면 ensure_ascii=False 설정\n",
+        "    json.dump(data, f, indent=4, ensure_ascii=False)\n",
         "\n",
-        "## DataFrame을 이용한 저장\n"
+        "## DataFrame을 이용한 저장\n",
+        "df = pd.DataFrame([data])\n",
+        "df.to_json('output_df.json', orient='records', indent=4, force_ascii=False)"
       ],
       "metadata": {
         "id": "7bAgRpizW7Vj"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -119,21 +126,54 @@
         "    \"학과\": [\"컴퓨터학\", \"경영학\", \"농학\", \"교육학\", \"영어영문학\"],\n",
         "    \"동아리\": [\"프로그래밍\", \"독서토론\", \"로봇공학\", \"봉사활동\", \"음악감상\"]\n",
         "}\n",
-        "df = pd.DataFrame([data])\n",
+        "df = pd.DataFrame(data)\n",
+        "df\n",
         "\n",
         "## DataFrame 인덱스 출력\n",
+        "print(df.index)\n",
         "\n",
         "## DataFrame 컬럼 출력\n",
+        "print(df.columns)\n",
         "\n",
         "## DataFrame 행 출력\n",
+        "print(df.values) # values는 NumPy 객체\n",
+        "print('\\n')\n",
+        "print(df.values.tolist())\n",
+        "print('\\n')\n",
         "\n",
-        "## DataFrame 값 출력\n"
+        "## DataFrame 값 출력\n",
+        "print(df.values.flatten())"
       ],
       "metadata": {
-        "id": "dk3xneVAW9_g"
+        "id": "dk3xneVAW9_g",
+        "outputId": "4e8304c6-53e7-4946-af1a-c37dc21e3795",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RangeIndex(start=0, stop=5, step=1)\n",
+            "Index(['이름', '학년', '학점', '학과', '동아리'], dtype='object')\n",
+            "[['김철수' 1 4.2 '컴퓨터학' '프로그래밍']\n",
+            " ['이영희' 2 3.8 '경영학' '독서토론']\n",
+            " ['박민수' 3 4.5 '농학' '로봇공학']\n",
+            " ['최지훈' 4 3.9 '교육학' '봉사활동']\n",
+            " ['정소희' 2 3.5 '영어영문학' '음악감상']]\n",
+            "\n",
+            "\n",
+            "[['김철수', 1, 4.2, '컴퓨터학', '프로그래밍'], ['이영희', 2, 3.8, '경영학', '독서토론'], ['박민수', 3, 4.5, '농학', '로봇공학'], ['최지훈', 4, 3.9, '교육학', '봉사활동'], ['정소희', 2, 3.5, '영어영문학', '음악감상']]\n",
+            "\n",
+            "\n",
+            "['김철수' 1 4.2 '컴퓨터학' '프로그래밍' '이영희' 2 3.8 '경영학' '독서토론' '박민수' 3 4.5 '농학'\n",
+            " '로봇공학' '최지훈' 4 3.9 '교육학' '봉사활동' '정소희' 2 3.5 '영어영문학' '음악감상']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -142,6 +182,15 @@
       ],
       "metadata": {
         "id": "ILJd1GLoseqm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Colab 좌측 파일 메뉴에 Chapter3 자료 추가한 후 진행\n"
+      ],
+      "metadata": {
+        "id": "B5yWin9w4BRd"
       }
     },
     {
@@ -159,15 +208,35 @@
         "}\n",
         "\n",
         "## 딕셔너리, csv, json으로 부터 DataFrame 생성\n",
+        "df1 = pd.DataFrame.from_dict(data)\n",
+        "df2 = pd.read_csv('students.csv')\n",
+        "df3 = pd.read_json('students.json')\n",
         "\n",
-        "\n",
-        "## 세가지 방법 결과 비교\n"
+        "## 세가지 방법 결과 비교\n",
+        "# shape는 DataFrame의 크기\n",
+        "print(df1.shape)\n",
+        "print(df2.shape)\n",
+        "print(df3.shape)"
       ],
       "metadata": {
-        "id": "ISnPLEgNXAmi"
+        "id": "ISnPLEgNXAmi",
+        "outputId": "49ad10d0-a254-47e0-e691-2a54360fb6e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5, 5)\n",
+            "(5, 5)\n",
+            "(5, 5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,16 +261,22 @@
         "}\n",
         "\n",
         "## Dataframe 생성\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
         "## CSV, JSON 형식으로 저장\n",
+        "df.to_csv('students_scores.csv')\n",
+        "df.to_json('students_scores.json', orient='records', indent=4, force_ascii=False)\n",
         "\n",
-        "\n",
-        "## HTML 형식으로 저장\n"
+        "## HTML 형식으로 저장\n",
+        "html_table = df.to_html() # html table 태그로 된 표로 변환됨\n",
+        "# print(html_table)\n",
+        "with open('students_scores.html', 'w') as f:\n",
+        "    f.write(html_table)"
       ],
       "metadata": {
         "id": "_dqoWCRoXDrJ"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -243,13 +318,38 @@
         "response = requests.get(url, params=params)\n",
         "\n",
         "## 호출 성공/실패 출력\n",
-        "\n"
+        "print(response.json())\n"
       ],
       "metadata": {
-        "id": "7yCozmQeXJcO"
+        "id": "7yCozmQeXJcO",
+        "outputId": "de2741cb-ad37-4914-b6cd-d31bc56676cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 418
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "JSONDecodeError",
+          "evalue": "Expecting value: line 1 column 1 (char 0)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/requests/models.py\u001b[0m in \u001b[0;36mjson\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    975\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 976\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mcomplexjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    977\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mJSONDecodeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/simplejson/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, use_decimal, allow_nan, **kw)\u001b[0m\n\u001b[1;32m    513\u001b[0m             and not use_decimal and not allow_nan and not kw):\n\u001b[0;32m--> 514\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    515\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/simplejson/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w, _PY3)\u001b[0m\n\u001b[1;32m    385\u001b[0m             \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/simplejson/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx, _w, _PY3)\u001b[0m\n\u001b[1;32m    415\u001b[0m                 \u001b[0midx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 416\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-710795681.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m## 호출 성공/실패 출력\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/requests/models.py\u001b[0m in \u001b[0;36mjson\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    978\u001b[0m             \u001b[0;31m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    979\u001b[0m             \u001b[0;31m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 980\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRequestsJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    981\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    982\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,8 +365,14 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "## requests로부터 response, body, item 항목 읽기\n",
-        "\n"
+        "## requests로부터 response.body.item 항목 읽기\n",
+        "data = response.json()['response']['body']['items']\n",
+        "print(type(data))\n",
+        "print(lent(data))\n",
+        "print(data[0])\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "df['pm25Grade']"
       ],
       "metadata": {
         "id": "HOOo9qTsXLkB"
@@ -286,13 +392,17 @@
     {
       "cell_type": "code",
       "source": [
+        "## CSV 형식으로 저장\n",
         "df.to_csv('air_pollution.csv', index=False, encoding='utf-8')\n",
         "\n",
         "## JSON 형식 데이터 저장\n",
+        "df.to_json('air_pollution.json', indent=4, force_ascii=False)\n",
         "\n",
         "## EXCEL 형식 데이터 저장\n",
+        "df.to_excel('air_pollution.xlsx', index=False)\n",
         "\n",
-        "## HTML 형식 데이터 저장\n"
+        "## HTML 형식 데이터 저장\n",
+        "html_table = df.to_html('air_pollution.html')"
       ],
       "metadata": {
         "id": "HW1ZodpgXNhG"
