오류 수정 시도

--- a/오픈소스_데이터_분석_8강.ipynb
+++ b/오픈소스_데이터_분석_8강.ipynb
@@ -81,27 +81,27 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "import random\n",
-        "# statsmodels의 formula api 임포트\n",
-        "import statsmodels.formula.api as smf\n",
+        "# import pandas as pd\n",
+        "# import random\n",
+        "# # statsmodels의 formula api 임포트\n",
+        "# import statsmodels.formula.api as smf\n",
         "\n",
-        "## 난수 시드 설정\n",
-        "random.seed(1)\n",
+        "# ## 난수 시드 설정\n",
+        "# random.seed(1)\n",
         "\n",
-        "## 데이터 생성\n",
-        "X = list(range(1, 11))\n",
-        "y = [2*x + 1 + random.gauss(0, 1) for x in X]\n",
+        "# ## 데이터 생성\n",
+        "# X = list(range(1, 11))\n",
+        "# y = [2*x + 1 + random.gauss(0, 1) for x in X]\n",
         "\n",
-        "## 데이터프레임 생성\n",
-        "data = pd.DataFrame({'X': X, 'y': y})\n",
+        "# ## 데이터프레임 생성\n",
+        "# data = pd.DataFrame({'X': X, 'y': y})\n",
         "\n",
-        "## OLS(최소 제곱법) 회귀 모델 생성 및 학습\n",
-        "## 'y'를 종속 변수로 하고 다른 특성(X)을 독립 변수로 사용\n",
-        "model = smf.ols(formula='y ~ X', data=data).fit()\n",
+        "# ## OLS(최소 제곱법) 회귀 모델 생성 및 학습\n",
+        "# ## 'y'를 종속 변수로 하고 다른 특성(X)을 독립 변수로 사용\n",
+        "# model = smf.ols(formula='y ~ X', data=data).fit()\n",
         "\n",
-        "## 모델 요약 결과 출력\n",
-        "print(model.summary())"
+        "# ## 모델 요약 결과 출력\n",
+        "# print(model.summary())"
       ]
     },
     {
@@ -133,30 +133,30 @@
         }
       ],
       "source": [
-        "# scikit-learn의 앙상블(ensemble) 알고리즘 중 RandomForestClassifier 임포트\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "# 모델 평가를 위한 데이터 분할(split) 함수 임포트\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "# 모델의 정확도(accuracy)를 측정하는 함수 임포트\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "# 예제 데이터셋(유방암 데이터) 로드 함수\n",
-        "from sklearn.datasets import load_breast_cancer\n",
+        "# # scikit-learn의 앙상블(ensemble) 알고리즘 중 RandomForestClassifier 임포트\n",
+        "# from sklearn.ensemble import RandomForestClassifier\n",
+        "# # 모델 평가를 위한 데이터 분할(split) 함수 임포트\n",
+        "# from sklearn.model_selection import train_test_split\n",
+        "# # 모델의 정확도(accuracy)를 측정하는 함수 임포트\n",
+        "# from sklearn.metrics import accuracy_score\n",
+        "# # 예제 데이터셋(유방암 데이터) 로드 함수\n",
+        "# from sklearn.datasets import load_breast_cancer\n",
         "\n",
-        "## 데이터 로드 및 분할\n",
-        "cancer = load_breast_cancer()\n",
-        "X, y = cancer.data, cancer.target\n",
+        "# ## 데이터 로드 및 분할\n",
+        "# cancer = load_breast_cancer()\n",
+        "# X, y = cancer.data, cancer.target\n",
         "\n",
-        "## 학습/테스트 데이터셋 분할\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "# ## 학습/테스트 데이터셋 분할\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
-        "## 랜덤 포레스트 모델 생성 및 학습\n",
-        "model = RandomForestClassifier(n_estimators=100) # 랜덤 포레스트에서 앙상블에 이용하는 모델의 갯수\n",
-        "model.fit(X=X_train, y=y_train)\n",
+        "# ## 랜덤 포레스트 모델 생성 및 학습\n",
+        "# model = RandomForestClassifier(n_estimators=100) # 랜덤 포레스트에서 앙상블에 이용하는 모델의 갯수\n",
+        "# model.fit(X=X_train, y=y_train)\n",
         "\n",
-        "## 예측 및 정확도 평가\n",
-        "y_pred = model.predict(X_test)\n",
-        "accuracy = accuracy_score(y_true=y_test, y_pred=y_pred)\n",
-        "print(accuracy)"
+        "# ## 예측 및 정확도 평가\n",
+        "# y_pred = model.predict(X_test)\n",
+        "# accuracy = accuracy_score(y_true=y_test, y_pred=y_pred)\n",
+        "# print(accuracy)"
       ]
     },
     {
@@ -219,37 +219,37 @@
         }
       ],
       "source": [
-        "# 딥러닝 모델을 평가하는 다양한 리포트 제공\n",
-        "from sklearn.metrics import classification_report\n",
-        "# 딥러닝 분석을 위한 tensorflow 임포트\n",
-        "import tensorflow as tf\n",
+        "# # 딥러닝 모델을 평가하는 다양한 리포트 제공\n",
+        "# from sklearn.metrics import classification_report\n",
+        "# # 딥러닝 분석을 위한 tensorflow 임포트\n",
+        "# import tensorflow as tf\n",
         "\n",
-        "## CIFAR-10 데이터셋 로드 및 전처리\n",
-        "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
-        "x_train, x_test = x_train/255.0, x_test/255.0\n",
+        "# ## CIFAR-10 데이터셋 로드 및 전처리\n",
+        "# (x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
+        "# x_train, x_test = x_train/255.0, x_test/255.0\n",
         "\n",
-        "## MobileNetV2 기반 모델 구축\n",
-        "base_model = tf.keras.applications.MobileNetV2(weights='imagenet', include_top=False, input_shape=(160, 160, 3))\n",
-        "base_model.trainable = False\n",
-        "model = tf.keras.Sequential([\n",
-        "    tf.keras.layers.Resizing(160, 160),\n",
-        "    base_model,\n",
-        "    tf.keras.layers.GlobalAveragePooling2D(),\n",
-        "    tf.keras.layers.Dense(10)\n",
-        "])\n",
+        "# ## MobileNetV2 기반 모델 구축\n",
+        "# base_model = tf.keras.applications.MobileNetV2(weights='imagenet', include_top=False, input_shape=(160, 160, 3))\n",
+        "# base_model.trainable = False\n",
+        "# model = tf.keras.Sequential([\n",
+        "#     tf.keras.layers.Resizing(160, 160),\n",
+        "#     base_model,\n",
+        "#     tf.keras.layers.GlobalAveragePooling2D(),\n",
+        "#     tf.keras.layers.Dense(10)\n",
+        "# ])\n",
         "\n",
-        "## 모델 컴파일\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
-        "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-        "              metrics=['accuracy'])\n",
+        "# ## 모델 컴파일\n",
+        "# model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+        "#               loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+        "#               metrics=['accuracy'])\n",
         "\n",
-        "## 모델 학습\n",
-        "model.fit(x_train, y_train, epochs=3, validation_split=0.2)\n",
+        "# ## 모델 학습\n",
+        "# model.fit(x_train, y_train, epochs=3, validation_split=0.2)\n",
         "\n",
-        "## 예측 및 성능 평가\n",
-        "y_pred = tf.argmax(model.predict(x_test), axis=1)\n",
-        "print(\"\\nTest Accuracy:\", model.evaluate(x_test, y_test, verbose=0)[1])\n",
-        "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
+        "# ## 예측 및 성능 평가\n",
+        "# y_pred = tf.argmax(model.predict(x_test), axis=1)\n",
+        "# print(\"\\nTest Accuracy:\", model.evaluate(x_test, y_test, verbose=0)[1])\n",
+        "# print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
       ]
     },
     {
@@ -320,27 +320,27 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from sklearn.datasets import load_diabetes\n",
+        "# import pandas as pd\n",
+        "# import matplotlib.pyplot as plt\n",
+        "# import seaborn as sns\n",
+        "# from sklearn.datasets import load_diabetes\n",
         "\n",
-        "## 당뇨병 데이터셋 로드 및 데이터프레임 생성\n",
-        "diabetes = load_diabetes()\n",
-        "df = pd.DataFrame(diabetes.data, columns=diabetes.feature_names)\n",
-        "df['target'] = diabetes.target\n",
+        "# ## 당뇨병 데이터셋 로드 및 데이터프레임 생성\n",
+        "# diabetes = load_diabetes()\n",
+        "# df = pd.DataFrame(diabetes.data, columns=diabetes.feature_names)\n",
+        "# df['target'] = diabetes.target\n",
         "\n",
-        "## dataframe의 describe를 이용하여 기본 통계량 출력\n",
-        "print(df.describe())\n",
+        "# ## dataframe의 describe를 이용하여 기본 통계량 출력\n",
+        "# print(df.describe())\n",
         "\n",
-        "## 상관 행렬 시각화\n",
-        "plt.figure(figsize=(12,8))\n",
-        "# dataframe의 각 열(변수)들 간의 상관 계수(correlation coefficient)를 계산하고 corr_matrix로 저장\n",
-        "corr_matrix = df.corr()\n",
-        "# seaborn으로 corr_matrix를 heatmap으로 시각화\n",
-        "sns.heatmap(corr_matrix, annot=True)\n",
-        "plt.title('Diabetes Dataset Correlation Matrix')\n",
-        "plt.show()"
+        "# ## 상관 행렬 시각화\n",
+        "# plt.figure(figsize=(12,8))\n",
+        "# # dataframe의 각 열(변수)들 간의 상관 계수(correlation coefficient)를 계산하고 corr_matrix로 저장\n",
+        "# corr_matrix = df.corr()\n",
+        "# # seaborn으로 corr_matrix를 heatmap으로 시각화\n",
+        "# sns.heatmap(corr_matrix, annot=True)\n",
+        "# plt.title('Diabetes Dataset Correlation Matrix')\n",
+        "# plt.show()"
       ]
     },
     {
@@ -396,23 +396,23 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
+        "# import pandas as pd\n",
+        "# import seaborn as sns\n",
         "\n",
-        "## 아이리스 데이터셋 로드\n",
-        "df = sns.load_dataset('iris')\n",
+        "# ## 아이리스 데이터셋 로드\n",
+        "# df = sns.load_dataset('iris')\n",
         "\n",
-        "# 기술 통계량\n",
-        "print(\"=== 기본 통계량 ===\")\n",
-        "print(df.describe())\n",
+        "# # 기술 통계량\n",
+        "# print(\"=== 기본 통계량 ===\")\n",
+        "# print(df.describe())\n",
         "\n",
-        "# 데이터 미리보기\n",
-        "print(\"\\n=== 데이터 미리보기 ===\")\n",
-        "print(df.head())\n",
+        "# # 데이터 미리보기\n",
+        "# print(\"\\n=== 데이터 미리보기 ===\")\n",
+        "# print(df.head())\n",
         "\n",
-        "# 그룹별 통계정보\n",
-        "print(\"\\n=== 품종별 평균값 ===\")\n",
-        "print(df.groupby('species').mean())"
+        "# # 그룹별 통계정보\n",
+        "# print(\"\\n=== 품종별 평균값 ===\")\n",
+        "# print(df.groupby('species').mean())"
       ]
     },
     {
@@ -506,10 +506,10 @@
       },
       "outputs": [],
       "source": [
-        "# 한글 처리를 위한 matplotlib 설정 (2)\n",
+        "# # 한글 처리를 위한 matplotlib 설정 (2)\n",
         "\n",
-        "import matplotlib.pyplot as plt\n",
-        "plt.rc('font', family='NanumBarunGothic')"
+        "# import matplotlib.pyplot as plt\n",
+        "# plt.rc('font', family='NanumBarunGothic')"
       ]
     },
     {
@@ -546,58 +546,58 @@
         }
       ],
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
+        "# import matplotlib.pyplot as plt\n",
+        "# import seaborn as sns\n",
         "\n",
-        "## 아이리스 데이터셋 로드\n",
-        "df = sns.load_dataset('iris')\n",
+        "# ## 아이리스 데이터셋 로드\n",
+        "# df = sns.load_dataset('iris')\n",
         "\n",
-        "## 서브플롯 설정\n",
-        "plt.figure(figsize=(9, 12))\n",
-        "plt.suptitle('Iris 데이터셋 시각화', y=1.02, fontsize=14)\n",
+        "# ## 서브플롯 설정\n",
+        "# plt.figure(figsize=(9, 12))\n",
+        "# plt.suptitle('Iris 데이터셋 시각화', y=1.02, fontsize=14)\n",
         "\n",
-        "## 첫 번째 서브플롯: 꽃잎 길이 분포 (히스토그램)\n",
-        "plt.subplot(4, 1, 1)\n",
-        "# seaborn을 이용하여 petal_length를 10개 구간으로 나누어 히스토그램 표시\n",
-        "sns.histplot(df['petal_length'], bins=10)\n",
-        "plt.title('꽃잎 길이 분포')\n",
-        "plt.xlabel('꽃잎 길이 (cm)')\n",
+        "# ## 첫 번째 서브플롯: 꽃잎 길이 분포 (히스토그램)\n",
+        "# plt.subplot(4, 1, 1)\n",
+        "# # seaborn을 이용하여 petal_length를 10개 구간으로 나누어 히스토그램 표시\n",
+        "# sns.histplot(df['petal_length'], bins=10)\n",
+        "# plt.title('꽃잎 길이 분포')\n",
+        "# plt.xlabel('꽃잎 길이 (cm)')\n",
         "\n",
-        "## 두 번째 서브플롯: 꽃잎 길이 vs 너비 (산점도)\n",
-        "plt.subplot(4, 1, 2)\n",
-        "species_list = df['species'].unique()\n",
-        "colors = {'setosa':'red', 'versicolor':'green', 'virginica':'blue'}\n",
+        "# ## 두 번째 서브플롯: 꽃잎 길이 vs 너비 (산점도)\n",
+        "# plt.subplot(4, 1, 2)\n",
+        "# species_list = df['species'].unique()\n",
+        "# colors = {'setosa':'red', 'versicolor':'green', 'virginica':'blue'}\n",
         "\n",
-        "for species in species_list:\n",
-        "    species_data = df[df['species'] == species]\n",
-        "    # matplotlib를 이용하여 길이, 넓이를 산점도로 표시\n",
-        "    plt.scatter(\n",
-        "        species_data['petal_length'], species_data['petal_width'],\n",
-        "        c=colors[species], label=species\n",
-        "    )\n",
-        "plt.title('꽃잎 길이 vs 너비')\n",
-        "plt.xlabel('꽃잎 길이 (cm)')\n",
-        "plt.ylabel('꽃잎 너비 (cm)')\n",
-        "plt.legend()\n",
+        "# for species in species_list:\n",
+        "#     species_data = df[df['species'] == species]\n",
+        "#     # matplotlib를 이용하여 길이, 넓이를 산점도로 표시\n",
+        "#     plt.scatter(\n",
+        "#         species_data['petal_length'], species_data['petal_width'],\n",
+        "#         c=colors[species], label=species\n",
+        "#     )\n",
+        "# plt.title('꽃잎 길이 vs 너비')\n",
+        "# plt.xlabel('꽃잎 길이 (cm)')\n",
+        "# plt.ylabel('꽃잎 너비 (cm)')\n",
+        "# plt.legend()\n",
         "\n",
-        "## 세 번째 서브플롯: 품종별 꽃받침 길이 (박스플롯)\n",
-        "plt.subplot(4, 1, 3)\n",
-        "# seaborn을 이용하여 품종 별 꽃받침 길이를 박스플롯으로 표시\n",
-        "sns.boxplot(x='species', y='sepal_length', data=df)\n",
-        "plt.title('품종별 꽃받침 길이 비교')\n",
-        "plt.xlabel('품종')\n",
-        "plt.ylabel('꽃받침 길이 (cm)')\n",
+        "# ## 세 번째 서브플롯: 품종별 꽃받침 길이 (박스플롯)\n",
+        "# plt.subplot(4, 1, 3)\n",
+        "# # seaborn을 이용하여 품종 별 꽃받침 길이를 박스플롯으로 표시\n",
+        "# sns.boxplot(x='species', y='sepal_length', data=df)\n",
+        "# plt.title('품종별 꽃받침 길이 비교')\n",
+        "# plt.xlabel('품종')\n",
+        "# plt.ylabel('꽃받침 길이 (cm)')\n",
         "\n",
-        "## 네 번째 서브플롯: 숫자형 특성 간 상관관계 (히트맵)\n",
-        "plt.subplot(4, 1, 4)\n",
-        "numeric_df = df.select_dtypes(include='number')\n",
-        "corr = numeric_df.corr()\n",
-        "sns.heatmap(corr, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
-        "plt.title('숫자형 특성 간 상관관계')\n",
+        "# ## 네 번째 서브플롯: 숫자형 특성 간 상관관계 (히트맵)\n",
+        "# plt.subplot(4, 1, 4)\n",
+        "# numeric_df = df.select_dtypes(include='number')\n",
+        "# corr = numeric_df.corr()\n",
+        "# sns.heatmap(corr, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
+        "# plt.title('숫자형 특성 간 상관관계')\n",
         "\n",
-        "## 레이아웃 조정 및 그래프 표시\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
+        "# ## 레이아웃 조정 및 그래프 표시\n",
+        "# plt.tight_layout()\n",
+        "# plt.show()"
       ]
     },
     {
@@ -1188,20 +1188,20 @@
         }
       ],
       "source": [
-        "import seaborn as sns\n",
-        "from ydata_profiling import ProfileReport\n",
+        "# import seaborn as sns\n",
+        "# from ydata_profiling import ProfileReport\n",
         "\n",
-        "## 아이리스 데이터셋 로드\n",
-        "df = sns.load_dataset('iris')\n",
+        "# ## 아이리스 데이터셋 로드\n",
+        "# df = sns.load_dataset('iris')\n",
         "\n",
-        "## 데이터 프로파일링 보고서 생성\n",
-        "profile = ProfileReport(df, title='보고서!')\n",
+        "# ## 데이터 프로파일링 보고서 생성\n",
+        "# profile = ProfileReport(df, title='보고서!')\n",
         "\n",
-        "## HTML 파일로 보고서 저장\n",
-        "profile.to_file('report.html')\n",
+        "# ## HTML 파일로 보고서 저장\n",
+        "# profile.to_file('report.html')\n",
         "\n",
-        "## 보고서 표시 (Jupyter Notebook 환경에서 보고서가 바로 표시됨)\n",
-        "profile"
+        "# ## 보고서 표시 (Jupyter Notebook 환경에서 보고서가 바로 표시됨)\n",
+        "# profile"
       ]
     }
   ],
