--- a/오픈소스_데이터_분석_8강.ipynb
+++ b/오픈소스_데이터_분석_8강.ipynb
@@ -47,7 +47,8 @@
       "source": [
         "import pandas as pd\n",
         "import random\n",
-        "# statsmodels의 formula api 임포트..\n",
+        "# statsmodels의 formula api 임포트\n",
+        "import statsmodels.formula.api as smf\n",
         "\n",
         "## 난수 시드 설정\n",
         "random.seed(1)\n",
@@ -61,8 +62,10 @@
         "\n",
         "## OLS(최소 제곱법) 회귀 모델 생성 및 학습\n",
         "## 'y'를 종속 변수로 하고 다른 특성(X)을 독립 변수로 사용\n",
+        "model = smf.ols(formula='y ~ X', data=data).fit()\n",
         "\n",
-        "## 모델 요약 결과 출력"
+        "## 모델 요약 결과 출력\n",
+        "print(model.summary())"
       ]
     },
     {
@@ -83,9 +86,13 @@
       "outputs": [],
       "source": [
         "# scikit-learn의 앙상블(ensemble) 알고리즘 중 RandomForestClassifier 임포트\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "# 모델 평가를 위한 데이터 분할(split) 함수 임포트\n",
+        "from sklearn.model_selection import train_test_split\n",
         "# 모델의 정확도(accuracy)를 측정하는 함수 임포트\n",
-        "# 예제 데이터셋(유방암 데이터) 로드 함수 임포트\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "# 예제 데이터셋(유방암 데이터) 로드 함수\n",
+        "from sklearn.datasets import load_breast_cancer\n",
         "\n",
         "## 데이터 로드 및 분할\n",
         "cancer = load_breast_cancer()\n",
@@ -95,8 +102,13 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
         "## 랜덤 포레스트 모델 생성 및 학습\n",
+        "model = RandomForestClassifier(n_estimators=100) # 랜덤 포레스트에서 앙상블에 이용하는 모델의 갯수\n",
+        "model.fit(X=X_train, y=y_train)\n",
         "\n",
-        "## 예측 및 정확도 평가"
+        "## 예측 및 정확도 평가\n",
+        "y_pred = model.predict(X_test)\n",
+        "accuracy = accuracy_score(y_true=y_test, y_pred=y_pred)\n",
+        "print(accuracy)"
       ]
     },
     {
@@ -116,8 +128,10 @@
       },
       "outputs": [],
       "source": [
+        "# 딥러닝 모델을 평가하는 다양한 리포트 제공\n",
         "from sklearn.metrics import classification_report\n",
         "# 딥러닝 분석을 위한 tensorflow 임포트\n",
+        "import tensorflow as tf\n",
         "\n",
         "## CIFAR-10 데이터셋 로드 및 전처리\n",
         "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
@@ -175,11 +189,14 @@
         "df['target'] = diabetes.target\n",
         "\n",
         "## dataframe의 describe를 이용하여 기본 통계량 출력\n",
+        "print(df.describe())\n",
         "\n",
         "## 상관 행렬 시각화\n",
         "plt.figure(figsize=(12,8))\n",
         "# dataframe의 각 열(변수)들 간의 상관 계수(correlation coefficient)를 계산하고 corr_matrix로 저장\n",
+        "corr_matrix = df.corr()\n",
         "# seaborn으로 corr_matrix를 heatmap으로 시각화\n",
+        "sns.heatmap(corr_matrix, annot=True)\n",
         "plt.title('Diabetes Dataset Correlation Matrix')\n",
         "plt.show()"
       ]
@@ -213,9 +230,11 @@
         "\n",
         "# 데이터 미리보기\n",
         "print(\"\\n=== 데이터 미리보기 ===\")\n",
+        "print(df.head())\n",
         "\n",
         "# 그룹별 통계정보\n",
-        "print(\"\\n=== 품종별 평균값 ===\")"
+        "print(\"\\n=== 품종별 평균값 ===\")\n",
+        "print(df.groupby('species').mean())"
       ]
     },
     {
@@ -286,6 +305,7 @@
         "## 첫 번째 서브플롯: 꽃잎 길이 분포 (히스토그램)\n",
         "plt.subplot(4, 1, 1)\n",
         "# seaborn을 이용하여 petal_length를 10개 구간으로 나누어 히스토그램 표시\n",
+        "sns.histplot(df['petal_length'], bins=10)\n",
         "plt.title('꽃잎 길이 분포')\n",
         "plt.xlabel('꽃잎 길이 (cm)')\n",
         "\n",
@@ -297,6 +317,10 @@
         "for species in species_list:\n",
         "    species_data = df[df['species'] == species]\n",
         "    # matplotlib를 이용하여 길이, 넓이를 산점도로 표시\n",
+        "    plt.scatter(\n",
+        "        species_data['petal_length'], species_data['petal_width'],\n",
+        "        c=colors[species], label=species\n",
+        "    )\n",
         "plt.title('꽃잎 길이 vs 너비')\n",
         "plt.xlabel('꽃잎 길이 (cm)')\n",
         "plt.ylabel('꽃잎 너비 (cm)')\n",
@@ -305,6 +329,7 @@
         "## 세 번째 서브플롯: 품종별 꽃받침 길이 (박스플롯)\n",
         "plt.subplot(4, 1, 3)\n",
         "# seaborn을 이용하여 품종 별 꽃받침 길이를 박스플롯으로 표시\n",
+        "sns.boxplot(x='species', y='sepal_length', data=df)\n",
         "plt.title('품종별 꽃받침 길이 비교')\n",
         "plt.xlabel('품종')\n",
         "plt.ylabel('꽃받침 길이 (cm)')\n",
@@ -356,10 +381,13 @@
         "df = sns.load_dataset('iris')\n",
         "\n",
         "## 데이터 프로파일링 보고서 생성\n",
+        "profile = ProfileReport(df, title='보고서!')\n",
         "\n",
         "## HTML 파일로 보고서 저장\n",
+        "profile.to_file('report.html')\n",
         "\n",
-        "## 보고서 표시 (Jupyter Notebook 환경에서 보고서가 바로 표시됨)"
+        "## 보고서 표시 (Jupyter Notebook 환경에서 보고서가 바로 표시됨)\n",
+        "profile"
       ]
     }
   ],
